Make tags nicer + fix svg and toc alignment

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -29,6 +29,13 @@ video {
   margin-top: 1em;
 }
 
+
+svg {
+  height: 1em;
+  width: 1em;
+  vertical-align: middle;
+}
+
 body {
   margin: 0;
   font-family: opensans;
@@ -37,10 +44,10 @@ body {
 a {
   text-decoration: none;
   display: inline-block;
+  transition: all 0.3s;
   
   &:hover{
     // font-size: x-large;
-    transition: all 0.3s;
     transform: scale(1.2, 1.2);
     transform-origin: left;
   }
