--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -48,3 +48,8 @@ article.post {
         }
     }
 }
+
+.tags a.label {
+    padding: 0.5em 1em;
+    border-radius: 2px;
+}
